Modified getClientByCode